# myapidb

./: .dockerignore  .env.example  Docker_Basic.md  Dockerfile  Kubenetes_Basic.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: crud.py  database.py  models.py  schemas.py
k8s_sample/: 01-pod.yaml  02-deployment.yaml  03-service.yaml  04-rolling-update.yaml  k6-loadtest.js  mongo-deployment.yaml
k8s_sample/config_cluster/: metrics_server_cloud.yaml
migrations/: env.py
migrations/versions/: db2a15610d9d_initial_migration.py
