[project]
name = "myapidb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.6"
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=46.0.3",
    "fastapi>=0.121.2",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "scalar-fastapi>=1.4.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
